@@ -54,6 +54,9 @@ Unreleased changes (1.0-dev)
     There was discussion to remove parse-rss, in light of the feed plugin, 
     however, this patch does not explicitly remove parse-rss. (dogacan, mattmann)
 
+17. NUTCH-471 - Fix synchronization in NutchBean creation. 
+    (Enis Soztutar via dogacan)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
